--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,8 @@
 site_name: Distribution Builder
 pages:
-    - Overview: index.md
-    - Quick Start: QuickStart.md
-    - Reference: Reference.md
-    - To-Do: ToDo.md
+    - Home: index.md
+    - Quick Start Guide: QuickStart.md
+    - Reference Manual: Reference.md
+    - To-Do List: ToDo.md
+    - Contact / Contribute: Contribute.md
+theme: windmill
