--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,9 @@ site_name: Distribution Builder
 pages:
     - Home: index.md
     - Quick Start Guide: QuickStart.md
-    - Reference Manual: Reference.md
+    - High Level Classes: HighLevel.md
+    - Low Level Functions: LowLevel.md
+    - Configuration Classes: ConfigClasses.md
     - Troubleshooting: Issues.md
     - To-Do List: ToDo.md
     - Contact / Contribute: Contribute.md
