Redefined the MkDocs output paths, resolving a GitHub Pages conflict related to the `docs` directory.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,3 +39,5 @@ markdown_extensions:
     - pymdownx.emoji
     - pymdownx.inlinehilite
     - pymdownx.magiclink
+docs_dir: docs_src
+site_dir: docs
