--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,10 +6,11 @@ nav:
     - Home: index.md
     - Quick Start: QuickStart.md
     - Examples: Examples.md
-    - Feature Topics:
+    - Features and Concepts:
         - Process Classes: HighLevel.md
         - Config Classes: ConfigClasses.md
-        - Low Level Functions: LowLevel.md
+        - Granular Operations: LowLevel.md
+        - Obfuscation: Obfuscation.md
         - Qt C++ Integration: QtCpp.md
     - Reference:
         - Config Factory.md
